--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
+<ng-container *ngIf="isLoading">
+<app-spinner-load></app-spinner-load>
+</ng-container>
+
+<ng-container *ngIf="!isLoading">
 <div class="auth-page">
   <div class="content login">
     <h1>Welcome</h1>
@@ -45,3 +50,4 @@
     </mat-card>
   </div>
 </div>
+</ng-container>
