--- a/src/app/components/app-snackbar/snackbar/snackbar.component.html
+++ b/src/app/components/app-snackbar/snackbar/snackbar.component.html
@@ -1,4 +1,4 @@
-<div class="snack-bar-container">
+<div class="snack-bar-container" [ngClass]="typeClass">
   <div class="col-content">
     <div class="col-message">
       <span [innerHTML]="data.message" class="link-style"></span>
