--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -29,7 +29,7 @@
         *ngFor="let movie of moviesDetails"
         (click)="openMovieModal(movie)"
       >
-        <img mat-card-avatar src="/src/assets/images/logo.png" />
+        <img  class="movie-image" src="/assets/images/logo.png" />
         <div class="content-details">
           <div class="movie-content-row">
             <div class="content-box">
