--- a/src/app/components/app-snackbar/snackbar/snackbar.component.scss
+++ b/src/app/components/app-snackbar/snackbar/snackbar.component.scss
@@ -1,19 +1,12 @@
 .snack-bar-container {
-  color: #0f172a;
-  background: white;
+  color: #1f2c29;
+  background: rgb(42, 159, 83);
   padding: 16px 14px;
   display: flex;
   justify-content: space-between;
   box-shadow: none;
-  border-radius: 4px;
+  border-radius: 2px;
   width: 416px;
-
-  .icon {
-    width: 16px;
-    height: 16px;
-    padding: 2px;
-    margin: auto;
-  }
 
   .col-content {
     display: flex;
@@ -29,15 +22,16 @@
     flex-direction: column-reverse;
     .action-button {
       padding: 11px 16px;
-      color: #07173c;
+      color: #0d245b;
+      background-color: azure;
     }
   }
 
   &.success {
-    background: #4000a7;
+    background: #07a647;
   }
 
   &.error {
-    background: #a0ede8;
+    background: #cc3535;
   }
 }
