--- a/src/app/components/movie-modal/movie-modal-view/movie-modal-view.component.html
+++ b/src/app/components/movie-modal/movie-modal-view/movie-modal-view.component.html
@@ -1,12 +1,11 @@
-<!-- movie-modal.component.html -->
 <div class="dialog">
-  <h1 mat-dialog-title>{{ movie.title }}</h1>
 <div mat-dialog-content>
-  <img [src]="movie.uuid" alt="Movie Avatar">
+  <img class="movie-avatar" src="/assets/images/logo.png" alt="Movie Avatar">
+  <p mat-dialog-title>{{ movie.title }}</p>
   <p>{{ movie.description }}</p>
   <p>{{ movie.genres }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onCloseClick()">Close</button>
+  <button class="action-button" mat-button-raised (click)="onCloseClick()">Close</button>
 </div>
 </div>
