--- a/src/app/movie-list/movie-list.component.scss
+++ b/src/app/movie-list/movie-list.component.scss
@@ -65,15 +65,21 @@
   box-sizing: border-box;
   float: left;
   display: flex;
+  align-items: center;
   flex-direction: column;
   row-gap: 5px;
   padding: 12px 0px 24px;
   width: 200px;
-  height: 300px;
   background-color: white;
   border: 1px solid #d5dce6;
   border-radius: 8px;
   box-shadow: 0px 0px 2px #4b4747;
+}
+
+.movie-image{
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
 }
 
 .content-box {
